<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:src="@mipmap/pizzalogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="120dp"
                android:text="@string/appName"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Delivery/Pickup -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <RadioGroup
                android:id="@+id/radioGroupDeliveryPickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">

                <RadioButton
                    android:id="@+id/radioButtonDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDeliver" />

                <RadioButton
                    android:id="@+id/radioButtonPickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPickup" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/pizzaBaseLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- Size -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewSize"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvSize"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerPizzaSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <!-- Base -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewBase"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvBase"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerPizzaBase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <!-- Topping Options -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvTopping"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical" />

                    <Spinner
                        android:id="@+id/spinnerToppingOptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <!-- Spice Level -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvSpice"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical" />

                    <Spinner
                        android:id="@+id/spinnerSpiceLevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <!-- Dressing -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvDressing"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical" />

                    <Spinner
                        android:id="@+id/spinnerSideDressing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <!-- Pizza Quantity -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/numberOfPizzasLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textViewNumberOfPizzas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="104dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/tvQuantity"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/btnMinus"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:onClick="decrementQuantity"
                        android:text="@string/lblMinus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnPlus" />

                    <EditText
                        android:id="@+id/editTextQuantity"
                        android:layout_width="53dp"
                        android:layout_height="53dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="3dp"
                        android:ems="3"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="@string/tvDefaultQuantity"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textViewNumberOfPizzas" />

                    <Button
                        android:id="@+id/btnPlus"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:onClick="incrementQuantity"
                        android:text="@string/lblPlus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Customer Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!-- Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvName"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name" />
            </LinearLayout>

            <!-- Gender -->
            <LinearLayout
                android:id="@+id/genderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGender"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvGender"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <!-- Address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAddress"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Address"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <!-- Phone Number -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPhone"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number"
                    android:inputType="phone" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="end">

            <!-- Cancel Button -->
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/lblCancel" />

            <!-- Place Order Button -->
            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblOrder" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>